# temp

./: Plan.txt  README.txt  car.xlsx
code/ClientSimulator/: ClientSimulator.sln
code/ClientSimulator/ClientSimulator/: ClientSimulator.aps  ClientSimulator.cpp  ClientSimulator.h  ClientSimulator.rc  ClientSimulator.vcxproj  ClientSimulator.vcxproj.filters  ClientSimulatorDlg.cpp  ClientSimulatorDlg.h  resource.h  stdafx.cpp
code/ClientSimulator/SimulatorLogic/: SimulatorLogic.cpp  SimulatorLogic.h  SimulatorLogic.vcxproj  SimulatorLogic.vcxproj.filters  UIMsgProcess.cpp  stdafx.h
code/Server/: CMakeLists.txt  Makefile.am  Server.sln  configure.ac
code/Server/CenterServer/: CMakeLists.txt  CenterServer.cpp  CenterServer.h  CenterServer.vcxproj  CenterServer.vcxproj.filters  Main.cpp  stdafx.h
code/Server/CenterServer/Config/: CenterServerConfig.cpp  CenterServerConfig.h
code/Server/CenterServer/Connection/: AppConnection.cpp  AppConnection.h  ClientConnection.cpp  ClientConnection.h  DataConnection.cpp  WebConnection.cpp  WebConnection.h
code/Server/CenterServerLogic/: CMakeLists.txt  CenterServerLogic.cpp  CenterServerLogic.h  CenterServerLogic.vcxproj  CenterServerLogic.vcxproj.filters  Makefile.am  stdafx.h
code/Server/CenterServerLogic/Client/: AppClient.cpp  AppClient.h  App_Server_Protocol.pb.cc  App_Server_Protocol.pb.h  Client.cpp  Client.h  DataClient.cpp  DataClient.h  WebClient.cpp  WebClient.h  Web_Server_Protocol.pb.cc  Web_Server_Protocol.pb.h
code/Server/CenterServerLogic/Config/: CenterServerLogicConfig.cpp  CenterServerLogicConfig.h
code/Server/CenterServerLogic/SensorDB/: SensorDBConn.cpp  SensorDBConn.h  SensorDBOperation.h
code/Server/CenterServerLogic/User/: AppUser.cpp  AppUser.h  User.cpp  User.h  WebUser.cpp  WebUser.h
code/Server/GameServer/: GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  Main.cpp
code/Server/GameServer/ClientConnection/: ClientConnection.cpp  ClientConnection.h
code/Server/GameServer/Config/: GameServerConfig.cpp  GameServerConfig.h
code/Server/GameServerLogic/: CMakeLists.txt  GameServerLogic.cpp  GameServerLogic.h  GameServerLogic.vcxproj  GameServerLogic.vcxproj.filters
code/Server/GameServerLogic/Player/: ClientGSProtocol.pb.cc  ClientGSProtocol.pb.h  Player.h  PlayerProtocol.cpp
code/Share/Header/: ClientGSProtocol.proto  commondefine.h
code/Temp/: Temp.sln
code/Temp/Temp/: Temp.cpp  Temp.h  Temp.vcxproj  (+1 more)
code/common/: CMakeLists.txt  CommonLibrary.opensdf  CommonLibrary.sln  Makefile.am  configure.ac
code/common/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  common.cpp  common.h
code/common/Daemon/: CMakeLists.txt  Daemon.cpp  Daemon.vcxproj  Daemon.vcxproj.filters
code/common/DataBase/: CMakeLists.txt  DataBase.vcxproj  DataBase.vcxproj.filters  stdafx.h
code/common/DataBase/Mysql/: MysqlQuery.cpp  MysqlQuery.h  MysqlResult.cpp  MysqlResult.h  MysqlResultSet.cpp  MysqlResultSet.h  ProcedureSqlObject.cpp  ProcedureSqlObject.h  SqlDefine.h
code/common/FileLog/: CMakeLists.txt  FileLog.cpp  FileLog.h  FileLog.vcxproj  FileLog.vcxproj.filters
code/common/FileReader/: CMakeLists.txt  FileReader.vcxproj  FileReader.vcxproj.filters  KDebug.cpp  KDebug.h  KFile.cpp  KFile.h  KFilePath.cpp  KFilePath.h  KIniFile.cpp  KIniFile.h  KLinkArray.cpp  KLinkArray.h  KList.h  KMemBase.cpp  KMemBase.h  KMemClass.cpp  KMemClass1.h  KMemStack.cpp  KMemStack.h  KNode.h  KPakFile.cpp  KPakFile.h  KStrBase.cpp  KStrBase.h  KStrList.h  KStrNode.h  KTabFile.cpp  KTabFile.h  MemClass.h  XPackFile.h  stdafx.h
code/common/Network/: CMakeLists.txt  Network.vcxproj  Network.vcxproj.filters  NetworkHead.h
code/common/Network/Client/: client_network_select.cpp  client_network_select.h  multi_client_network_select.cpp  multi_client_network_select.h
code/common/Network/Server/: server_network_epoll.cpp  server_network_epoll.h  server_network_select.cpp  server_network_select.h
code/common/Network/conn_info/: client_conn_info.cpp  client_conn_info.h  conn_info.cpp  conn_info.h  server_conn_info.cpp  server_conn_info.h
code/common/RingBuffer/: CMakeLists.txt  RingBuffer.cpp  RingBuffer.h  RingBuffer.vcxproj  RingBuffer.vcxproj.filters
code/server/: Server.sln
code/server/center/: Makefile.am
code/server/center/CenterServer/: CenterServer.cpp  CenterServer.h  CenterServer.vcxproj  CenterServer.vcxproj.filters
code/server/center/CenterServer/Config/: CenterServerConfig.cpp
code/server/center/CenterServer/Connection/: AppConnection.cpp  AppConnection.h  ClientConnection.cpp  ClientConnection.h  DataConnection.cpp  DataConnection.h  WebConnection.cpp  WebConnection.h
code/server/center/CenterServerLogic/: CMakeLists.txt  CenterServerLogic.cpp  CenterServerLogic.vcxproj  CenterServerLogic.vcxproj.filters  Makefile.am  stdafx.h
code/server/center/CenterServerLogic/Client/: AppClient.cpp  AppClient.h  App_Server_Protocol.pb.cc  App_Server_Protocol.pb.h  Client.cpp  Client.h  CommonDefine.pb.cc  CommonDefine.pb.h  DataClient.cpp  DataClient.h  WebClient.cpp  WebClient.h  Web_Server_Protocol.pb.cc  Web_Server_Protocol.pb.h
code/server/center/CenterServerLogic/Config/: CenterServerLogicConfig.cpp
code/server/center/CenterServerLogic/SensorDB/: SensorDBConn.cpp  SensorDBOperation.h
code/server/data/: CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
code/server/data/data_logic/: DataLogic.cpp  DataLogic.h  Makefile.am  data_logic.vcxproj  data_logic.vcxproj.filters
code/server/data/data_logic/Client/: Client.h  DataClient.cpp  DataClient.h
code/server/data/data_logic/Config/: DataLogicConfig.cpp  DataLogicConfig.h
code/server/data/data_logic/SensorDB/: SensorDBConn.cpp  SensorDBConn.h  SensorDBOperation.h
code/server/data/data_server/: DataServer.cpp  DataServer.h  Main.cpp  data_server.vcxproj  data_server.vcxproj.filters
code/server/data/data_server/Config/: DataServerConfig.cpp  DataServerConfig.h
code/server/data/data_server/Connection/: ClientConnection.cpp  ClientConnection.h  DataConnection.cpp  DataConnection.h
(+78 files in other folders)
