llib_LIBRARIES = libcenterserverlogic.a

libcenterserverlogic_a_SOURCES = CenterServerLogic.cpp

libcenterserverlogic_a_SOURCES += Client/App_Server_Protocol.pb.cc

libcenterserverlogic_a_SOURCES += Client/AppClient.cpp

libcenterserverlogic_a_SOURCES += Client/Client.cpp

libcenterserverlogic_a_SOURCES += Client/DataClient.cpp

libcenterserverlogic_a_SOURCES += Client/Web_Server_Protocol.pb.cc

libcenterserverlogic_a_SOURCES += Client/WebClient.cpp

libcenterserverlogic_a_SOURCES += Config/CenterServerLogicConfig.cpp

libcenterserverlogic_a_SOURCES += SensorDB/SensorDBConn.cpp


INCLUDES = -I./
INCLUDES += -I../../Share/Header/
INCLUDES += -I../../Share/Header/Base/
INCLUDES += -I../../Share/Header/Server/
INCLUDES += -I../../Share/Header/CenterServer/
INCLUDES += -I../../Share/Header/curl/
#LDADD = ../../../Share/llib/libcommon.a
llibdir=../../Share/llib/




