llib_LIBRARIES = libcenterserverlogic.a

libcenterserverlogic_a_SOURCES = CenterServerLogic.cpp

libcenterserverlogic_a_SOURCES += Client/App_Server_Protocol.pb.cc

libcenterserverlogic_a_SOURCES += Client/AppClient.cpp

libcenterserverlogic_a_SOURCES += Client/Client.cpp

libcenterserverlogic_a_SOURCES += Client/DataClient.cpp

libcenterserverlogic_a_SOURCES += Client/Web_Server_Protocol.pb.cc

libcenterserverlogic_a_SOURCES += Client/WebClient.cpp

libcenterserverlogic_a_SOURCES += Client/CommonDefine.pb.cc

libcenterserverlogic_a_SOURCES += Config/CenterServerLogicConfig.cpp

libcenterserverlogic_a_SOURCES += SensorDB/SensorDBConn.cpp


INCLUDES = -I./
INCLUDES += -I../../../share/header/
INCLUDES += -I../../../share/header/Base/
INCLUDES += -I../../../share/header/Server/
INCLUDES += -I../../../share/header/CenterServer/
INCLUDES += -I../../../share/header/curl/
INCLUDES += -I../../../share/header/Protocol/
llibdir=../../../share/llib/

