llib_LIBRARIES = libdataserverlogic.a

libdataserverlogic_a_SOURCES = DataLogic.cpp

libdataserverlogic_a_SOURCES += Client/App_Server_Protocol.pb.cc

libdataserverlogic_a_SOURCES += Client/Client.cpp

libdataserverlogic_a_SOURCES += Client/DataClient.cpp

libdataserverlogic_a_SOURCES += Config/DataLogicConfig.cpp

libdataserverlogic_a_SOURCES += SensorDB/SensorDBConn.cpp


INCLUDES = -I./
INCLUDES += -I../../../share/header/
INCLUDES += -I../../../share/header/Base/
INCLUDES += -I../../../share/header/Server/
INCLUDES += -I../../../share/header/DataServer/
llibdir=../../../share/llib/

